fixed vimeo link spacing

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -49,6 +49,10 @@ figure {
 	overflow: hidden;
 }
 
+.vimeo-marg {
+	padding-top: 2rem;
+}
+
 .unit {
 	float: left;
 	width: 33.333%;
